--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
+  "script": {
+    "start": "nodemon server.js"
+  },
   "devDependencies": {
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
+  
 }
