--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.17.0"
   },
   "script": {
     "start": "nodemon server.js"
@@ -12,5 +13,4 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
   }
-  
 }
